v0.11.1/_sources/generated/statsmodels.regression.recursive_ls.RecursiveLS.rst.txt
statsmodels.regression.recursive\_ls.RecursiveLS
================================================

.. currentmodule:: statsmodels.regression.recursive_ls

.. autoclass:: RecursiveLS
   :exclude-members:

   
   
   .. rubric:: Methods

   .. autosummary::
      :toctree:

      ~RecursiveLS.clone
      ~RecursiveLS.filter
      ~RecursiveLS.fit
      ~RecursiveLS.fit_constrained
      ~RecursiveLS.fix_params
      ~RecursiveLS.from_formula
      ~RecursiveLS.handle_params
      ~RecursiveLS.hessian
      ~RecursiveLS.impulse_responses
      ~RecursiveLS.information
      ~RecursiveLS.initialize
      ~RecursiveLS.initialize_approximate_diffuse
      ~RecursiveLS.initialize_known
      ~RecursiveLS.initialize_statespace
      ~RecursiveLS.initialize_stationary
      ~RecursiveLS.loglike
      ~RecursiveLS.loglikeobs
      ~RecursiveLS.observed_information_matrix
      ~RecursiveLS.opg_information_matrix
      ~RecursiveLS.predict
      ~RecursiveLS.prepare_data
      ~RecursiveLS.score
      ~RecursiveLS.score_obs
      ~RecursiveLS.set_conserve_memory
      ~RecursiveLS.set_filter_method
      ~RecursiveLS.set_inversion_method
      ~RecursiveLS.set_smoother_output
      ~RecursiveLS.set_stability_method
      ~RecursiveLS.simulate
      ~RecursiveLS.simulation_smoother
      ~RecursiveLS.smooth
      ~RecursiveLS.transform_jacobian
      ~RecursiveLS.transform_params
      ~RecursiveLS.untransform_params
      ~RecursiveLS.update
   
   
   
   
   
   .. rubric:: Properties

   .. autosummary::
      :toctree:

      ~RecursiveLS.endog_names
      ~RecursiveLS.exog_names
      ~RecursiveLS.initial_variance
      ~RecursiveLS.initialization
      ~RecursiveLS.loglikelihood_burn
      ~RecursiveLS.param_names
      ~RecursiveLS.start_params
      ~RecursiveLS.state_names
      ~RecursiveLS.tolerance
   
   
   